[package]
name = "rust-book-quiz-desktop"
version = "1.0.0"
edition = "2024"

[lib]
name = "rust_book_quiz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
